flux/infrastructure/rook-ceph-object/external-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: rook-ceph-object-external
    namespace: rook-ceph
spec:
    parentRefs:
        - name: tls-gateway
          namespace: kube-system
    hostnames:
        - "s3.axiom.lucasfehres.nl"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: rook-ceph-rgw-object-store
                port: 80
