flux/infrastructure/rook-ceph-object/internal-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: rook-ceph-object
    namespace: rook-ceph
spec:
    parentRefs:
        - name: internal-gateway
          namespace: kube-system
    hostnames:
        - "rook-ceph-object.internal.axiom.lucasfehres.nl"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: rook-ceph-rgw-object-store
                port: 80
